<resources>
    <string name="app_name">Wallet</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="valor_despesa_receita_Default">€ 00.00</string>
    <string name="data_label">Data</string>
    <string name="categoria_label">Categoria</string>
    <string name="descricao_label">Descrição</string>
    <string name="primeiro_fragment_texto_principal">Mantenha as suas contas \nsempre organizadas</string>
    <string name="primeiro_fragment_texto_secundario">Simples, fácil, rápido e grátis</string>
    <string name="segundo_fragment_texto_principal">Saiba para onde está a ir o seu dinheiro</string>
    <string name="segundo_fragment_texto_secundario">Categorize os seus registos \ne veja o destino do seu dinheiro</string>
    <string name="terceiro_fragment_texto_principal">Nunca mais esqueça de \n pagar uma conta</string>
    <string name="terceiro_fragment_texto_secundario">Programe alertas quando quiser</string>
    <string name="quarto_fragment_texto_principal">Tudo organizado no seu telemóvel</string>
    <string name="quarto_fragment_texto_secundario">Use esta app diretamente \nno seu telemóvel</string>
    <string name="loading_label">Carregando...</string>
    <string name="saldo_geral">Saldo geral</string>
    <string name="titulo_label">Titulo</string>
    <string name="valor_label">valor</string>
    <string name="login_text">Aceda à sua conta</string>
    <string name="email_label">E-mail</string>
    <string name="password_label">Password</string>
    <string name="login_button">Entrar</string>
    <string name="notificacao_button">Agendar Notificação</string>
    <string name="nome_label">Nome</string>
    <string name="perfil_button">Guardar Perfil</string>
    <string name="premium_label">Premium</string>
    <string name="alterar_foto_label">Alterar foto</string>
    <string name="logout_label">Terminar Sessão</string>
    <string name="perfil_label">Perfil</string>
    <string name="registo_text">Crie a sua conta grátis</string>
    <string name="registar_button">Registar</string>
    <string name="termos_e_condicoes">Termos e condições</string>
    <string name="registo_login_texto_principal">Crie a sua conta grátis</string>
    <string name="registo_login_texto_secundario">Junte-se a mais de meio milhão\n de pessoas e começe já</string>
    <string name="login_ready">Já tenho conta</string>
    <string name="receita_label">Receita</string>
    <string name="despesa_label">Despesa</string>
</resources>